--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,8 @@ div {
 }
 ul.links li { 
 	float: right;
-	margin-top: 10px;
+	margin-top: 20px;
+	margin-left: 20px;
 }
 .top navigation {
 	font-family: 'Roboto', sans-serif; 
