--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/* Paul Irish Box-Sizing: Border-Box reset - apply a natural box layout model to all elements, but allowing components to change http://www.paulirish.com/2012/box-sizing-border-box-ftw/ */
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -63,14 +70,27 @@ div {
 	height: 70px;
 	margin: 0 auto;
 }
-ul.links li { 
-	float: right;
-	margin-top: 20px;
-	margin-left: 20px;
+.top-navigation .logo {
+    height: 70px;
 }
-.top navigation {
+.top-navigation .links { 
+	float: right;
 	font-family: 'Roboto', sans-serif; 
 	font-size: 16px; 
 	color: #838994; 
 	letter-spacing: 0.03em;
+	-webkit-font-smoothing: antialiased;
+	margin-top: 20px;
+}
+.top navigation .links {
+	display: inline-block;
+	margin-left: 25px;	
+}
+.top-navigation .links > .active {
+    color: #4c5058;
+    font-weight: 600;
+}
+.top-navigation .links li:hover {
+    cursor: pointer;
+    color: #333333;
 }
