--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,21 @@ div {
     overflow: auto;
 }
 .introduction .content {
-	color: #FFFFFF;
+	color: white;
+}
+.introduction h1,
+.introduction h3 {
+    color: white;
+    text-align: center;
+    font-weight: 300;
+}
+.introduction h1 {
+    margin-top: 17.5rem;
+    font-size: 3.125rem;
+}
+.introduction h3 {
+    margin-top: 1.25rem;
+    font-size: 1.563rem;
 }
 .big-button {
     text-shadow: none;
