--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ div {
     background-position: center bottom;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 45.938px;
+    height: 45.938rem;
     overflow: auto;
 }
 .introduction .content {
