--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,9 @@ table {
 /* Navigation Section */
 .top-navigation {
 	background-color: #fff;
+	position: fixed;
+    width: 100%;
+    border-bottom: 1px solid #DDD;
 }
 .top-navigation > .content {
 	width: 970px;
